# hexagondb

./: BUILD.md  Cargo.toml  HOW_TO_USE.md  LICENSE  Makefile  README.md  database.aof  justfile  test_ci_time.sh
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: aof.rs  backup.rs  client.rs  config.rs  connection.rs  database.rs  error.rs  interpreter.rs  lib.rs  main.rs  parse_query.rs  pipeline.rs  replication.rs  resp.rs  security.rs  server_info.rs  slowlog.rs  transaction.rs
src/cli/: client.rs  colors.rs  commands.rs  completer.rs  config.rs  highlighter.rs  hinter.rs  mod.rs  output.rs  parser.rs  repl.rs
src/commands/: mod.rs
src/db/: core.rs  mod.rs  pubsub.rs  types.rs
src/db/ops/: bitmap.rs  generic.rs  geo.rs  hash.rs  hyperloglog.rs  list.rs  mod.rs  set.rs  stream.rs  string.rs  zset.rs
src/network/: connection.rs  mod.rs  resp.rs
src/observability/: metrics.rs
src/persistence/: aof.rs  mod.rs  snapshot.rs
tools/: README.md  migrate.py
