[package]
name = "hexagondb"
version = "0.1.0"
edition = "2021"
authors = ["HexagonDB Contributors"]
description = "A fast, in-memory key-value database written in Rust"
license = "MIT"
repository = "https://github.com/hexagon-db/HexagonDB"
keywords = ["database", "key-value", "in-memory", "redis"]
categories = ["database"]

[dependencies]
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

