[workspace]
members = ["cli"]

[package]
name = "hexagondb"
version = "0.1.0"
edition = "2021"
authors = ["HexagonDB Contributors"]
description = "A fast, in-memory key-value database written in Rust"
license = "MIT"
repository = "https://github.com/hexagon-db/HexagonDB"
keywords = ["database", "key-value", "in-memory", "redis"]
categories = ["database"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
