[package]
name = "hexagondb-cli"
version = "0.1.0"
edition = "2021"
authors = ["HexagonDB Contributors"]
description = "Command-line client for HexagonDB"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
tokio = { version = "1.48", features = ["full"] }
colored = "2.1"
dirs = "5.0"
rustyline-derive = "0.10"
anyhow = "1.0"
rpassword = "7.3"
